:sparkles: Tela de game over e confetes na tela de acerto :sparkles:

--- a/index.html
+++ b/index.html
@@ -17,10 +17,13 @@
 
     <div id="chute" class="mensagem">
 
+    <canvas id="my-canvas"></canvas>
     </div>
 
 <script src="app/sortearNumero.js"></script>    
 <script src="app/reconhecimentoDeVoz.js"></script>    
 <script src="app/validacoes.js"></script>    
+<script src="app/confetti.min.js"></script>    
+
 </body>
 </html>
